# repovet

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: issue-comment-bot.yml  reusable-watchlist.yml
docs/: case-study-freedomain-2026-07.md  reusable-watchlist-workflow.md
leaderboard/: generate_site.py  index.html  leaderboard-data.json  scan_leaderboard.py  seed-repos.json  test_generate_site.py
skills/repovet/: SKILL.md
src/repovet/: __init__.py  __main__.py  ai_slop_collectors.py  ai_slop_hints.py  bot.py  bot_cli.py  cache.py  cli.py  collectors.py  dependency_collectors.py  dependency_manifest.py  dependency_scoring.py  errors.py  github_client.py  graphql_client.py  output.py  popular_packages.py  registry_client.py  reply.py  scoring.py  star_collectors.py  star_scoring.py  targets.py
tests/: conftest.py  test_ai_slop_collectors.py  test_ai_slop_hints.py  test_bot.py  test_bot_cli.py  test_cli.py  test_collectors.py  test_dependency_collectors.py  test_dependency_manifest.py  test_dependency_scoring.py  test_github_client.py  test_graphql_client.py  test_registry_client.py  test_reply.py  test_scoring.py  test_star_collectors.py  test_star_scoring.py  test_targets.py
