[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repovet"
version = "0.1.0"
description = "Developer trust check for GitHub repos before you depend on them."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
repovet = "repovet.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/repovet"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests", "leaderboard"]
pythonpath = ["src", "leaderboard"]
